# aoc2015-rust

./: Cargo.toml  README.md
.github/: FUNDING.yml
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/docs/: thoughts.md
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml  notes.md
day09/src/: main.rs
day10/: Cargo.toml  notes.md
day10/src/: main.rs
day11/: Cargo.toml  notes.md
day11/src/: main.rs
day12/: Cargo.toml  notes.md
day12/src/: main.rs
day13/: Cargo.toml  notes.md
day13/src/: main.rs
day14/: Cargo.toml  notes.md
day14/src/: main.rs
day15/: Cargo.toml  notes.md
day15/src/: main.rs
day16/: Cargo.toml  notes.md
day16/src/: main.rs
day17/: Cargo.toml  notes.md
day17/src/: main.rs
day18/: notes.md
day18/src/: main.rs
day19/: Cargo.toml  notes.md
day19/src/: main.rs
day20/: Cargo.toml  notes.md
day20/src/: main.rs
src/: lib.rs
